Bug 142402 - FILEOPEN\VIEWING\XLSX Differrent values at standard filter
Summary: FILEOPEN\VIEWING\XLSX Differrent values at standard filter
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.2.0
Keywords: filter:xlsx
Depends on:
Blocks:
 
Reported: 2021-05-21 06:20 UTC by NISZ LibreOffice Team
Modified: 2024-10-12 08:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File with the different values (8.99 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-05-21 06:50 UTC, NISZ LibreOffice Team
Details
Picture with different values (88.06 KB, image/png)
2021-05-21 06:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-21 06:20:31 UTC
Description:
Open attached xlsx. Click on filter at A1 cell then click on standard filter. At value field there is different values then in the cells. It should be same values.

Actual Results:
At value field there is different values then in the cells

Expected Results:
It should be same values.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 44b914b1e2616ca8f70e896e653a46ca93610234
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2021-05-21 06:50:52 UTC
Created attachment 172214 [details]
File with the different values
Comment 2 NISZ LibreOffice Team 2021-05-21 06:51:51 UTC
Created attachment 172215 [details]
Picture with different values
Comment 3 Commit Notification 2021-05-31 10:16:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f755525189884e4b2824889a6b9dea8933402db

tdf#142402 sc UI: store formatted values in standard filter

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2021-06-03 10:41:56 UTC
It's ok now. All have 2 decimals now.
Verified in
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded

One sugestion: it is possible to align all the value to the right, in order to be easy to bea read?