tdf#142402 sc UI: store formatted values in standard filter

value list and filter by formatted values later, just like
we do in the autofilter.

Follow-up to commit 4fd1333ba4bb4f2311e9098291154772bd310429
"tdf#140968 tdf#140978 XLSX import: fix lost rounded filters".

Change-Id: If26f4c0abd54de05b497861f2c278972bd8072de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116115
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1f755525189884e4b2824889a6b9dea8933402db)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120721
Tested-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>
Reviewed-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>